docs(demos): load polyfills
Use polyfills.io service

--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -32,5 +32,6 @@ html
       block main
     footer(class=layout.footer)
       p= `Copyright © ${currentYear} by Gregor Adams`
+    script(src="https://cdn.polyfill.io/v2/polyfill.min.js")
     block scripts
     script(src=`${data.fileName}.js?${timestamp}`)
